tests/baselines/reference/parserSetAccessorWithTypeParameters1.errors.txt
parserSetAccessorWithTypeParameters1.ts(2,8): error TS1094: An accessor cannot have type parameters.


==== parserSetAccessorWithTypeParameters1.ts (1 errors) ====
    class C {
       set foo<T>(v) { }
           ~~~
!!! error TS1094: An accessor cannot have type parameters.
    }